fix(collision): preserve canonical G1 data ordering